# FinalProject

./: CMakeLists.txt  ConverterJSON.cpp  ConverterJSON.h  ConverterJSON_test.cpp  EmptyProject.sln  EmptyProject.vcxproj  EmptyProject.vcxproj.filters  InvertedIndex.cpp  InvertedIndex.h  InvertedIndex_test.cpp  SearchEngine.cpp  SearchEngine.h  SearchEngine_test.cpp  config.json  main.cpp  test_gtest.cpp
include/: CMakeLists.txt  ConverterJSON.h  InvertedIndex.h  SearchEngine.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchEngine.cpp  main.cpp
test/: CMakeLists.txt  ConverterJSON_test.cpp  InvertedIndex_test.cpp  SearchEngine_test.cpp  test_gtest.cpp
